# EdStemMCP

./: .gitignore  README.md  pyproject.toml
src/edstem_mcp/: __init__.py  ed_client.py  formatting.py  rerank.py  server.py
tests/: test_formatting.py  test_rerank.py
