[project]
name = "edstem-mcp"
version = "0.1.0"
description = "An MCP server that answers questions from your Ed Discussion (edstem.org) posts, with Cohere Rerank for relevance."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.2.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "cohere>=5.13",
]

[project.scripts]
edstem-mcp = "edstem_mcp.server:main"

[dependency-groups]
test = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/edstem_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
